# termua

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  README.md  README.zh-CN.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml  codecov.yml  coverage.yml  package.yml  test.yml
assets/shell/: termua-env.nu  termua-osc133.bash  termua-osc133.fish  termua-osc133.nu  termua-osc133.ps1  termua-osc133.zsh
crates/alacritty_terminal/: Cargo.toml
crates/alacritty_terminal/src/: event.rs  event_loop.rs  index.rs  lib.rs  selection.rs  vi_mode.rs
crates/alacritty_terminal/src/grid/: mod.rs  resize.rs  row.rs  storage.rs  tests.rs
crates/alacritty_terminal/src/term/: cell.rs  mod.rs  search.rs
crates/alacritty_terminal/src/tty/: mod.rs  unix.rs
crates/alacritty_terminal/src/tty/windows/: blocking.rs  child.rs  conpty.rs  mod.rs
crates/alacritty_terminal/tests/: ref.rs
crates/gpui_common/: Cargo.toml  build.rs
crates/gpui_common/src/: assets.rs  format.rs  icons.rs  lib.rs  limiter.rs  toast.rs  transfer.rs
crates/gpui_dock/: Cargo.toml  README.md
crates/gpui_dock/examples/: center_split.rs  four_docks.rs  tab_icon.rs  tiles.rs
crates/gpui_dock/src/: dock.rs  history.rs  invalid_panel.rs  lib.rs  panel.rs  stack_panel.rs  state.rs  tab_panel.rs  tiles.rs
crates/gpui_dock/src/resizable/: mod.rs  panel.rs  resize_handle.rs
crates/gpui_sftp/: Cargo.toml
crates/gpui_sftp/src/: lib.rs  preview.rs  state.rs
crates/gpui_sftp/src/view/: file_icons.rs  format.rs  mod.rs  path.rs  preview.rs  render.rs  tests.rs
crates/gpui_sftp/src/view/table/: actions.rs  delegate.rs  mod.rs  navigation.rs  transfers.rs
crates/gpui_term/: Cargo.toml
crates/gpui_term/examples/: term.rs
crates/gpui_term/src/: builder.rs  cast.rs  element.rs  lib.rs  remote.rs  serial.rs  settings.rs  shell.rs  snippet.rs  suggestions.rs  terminal.rs  util.rs
crates/gpui_term/src/backends/: mod.rs  remote.rs  search.rs  ssh.rs
crates/gpui_term/src/backends/alacritty/: keys.rs  mod.rs  mouse.rs  record.rs  serial.rs  ssh.rs
crates/gpui_term/src/backends/wezterm/: mod.rs
crates/gpui_term/src/command_blocks/: mod.rs  osc.rs  query.rs  store.rs  tracker.rs
crates/gpui_term/src/theme/: mod.rs
crates/gpui_term/src/view/: input.rs  line_number.rs  mod.rs  record.rs  render.rs  scrollbar.rs  scrolling.rs  search.rs  suggestions.rs
crates/gpui_transfer/: Cargo.toml
crates/gpui_transfer/src/: lib.rs
crates/menubar/: Cargo.toml  README.md
crates/menubar/examples/: menubar.rs
crates/menubar/src/: lib.rs  menu_bar.rs  state.rs  titlebar.rs
crates/termua_relay/: Cargo.toml
crates/termua_relay/src/: main.rs  protocol.rs  server.rs  state.rs
crates/termua_relay/tests/: ws_fanout_and_control.rs  ws_register_join.rs
crates/termua_zeroclaw/: Cargo.toml
crates/termua_zeroclaw/src/: lib.rs
crates/wezterm-ssh/: Cargo.toml
crates/wezterm-ssh/examples/: proxycommand.rs  proxyjump.rs
crates/wezterm-ssh/src/: auth.rs  channelwrap.rs  config.rs  dirwrap.rs  filewrap.rs  host.rs  lib.rs  pty.rs  session.rs  sessioninner.rs  sessionwrap.rs  sftpwrap.rs
crates/wezterm-ssh/src/sftp/: dir.rs  error.rs  file.rs  mod.rs  types.rs
crates/wezterm-ssh/tests/: proxyjump_support.rs  sftp_errors.rs
locales/: en.yml  zh-CN.yml
packaging/: package-version.sh
packaging/linux/: make-appimage.sh  make-deb.sh  make-rpm.sh  termua.desktop
packaging/macos/: build-icns.sh  make-dmg.sh
packaging/tests/: dmg-volume-icon-check.sh  relay-package-integration-check.sh
packaging/windows/: make-msi.ps1
packaging/windows/tests/: build-script-icon-check.sh  make-msi-icon-test.ps1  make-msi-relay-test.ps1
termua/: Cargo.toml  build.rs
termua/src/: app_state.rs  assistant.rs  atomic_write.rs  bootstrap.rs  cast_player.rs  command_history.rs  env.rs  globals.rs  keychain.rs  locale.rs  logging.rs  main.rs  menu.rs  notification.rs  right_sidebar.rs  serial.rs  settings.rs  shell_integration.rs  static_suggestions.rs  theme_manager.rs
termua/src/footbar/: mod.rs  transfers.rs
termua/src/lock_screen/: linux_pam_auth.rs  macos_pam_auth.rs  mod.rs  overlay.rs  view.rs  win_auth.rs
termua/src/panel/: assistant_panel.rs  message_panel.rs  mod.rs  right_sidebar.rs  sftp_panel.rs  ssh_error_panel.rs  terminal_panel.rs
termua/src/panel/sessions_sidebar/: actions.rs  icons.rs  mod.rs  render.rs  state.rs  tests.rs  tree.rs
termua/src/session/: store.rs
termua/src/sharing/: mod.rs
termua/src/ssh/: mod.rs
termua/src/window/: mod.rs  nav_tree.rs  theme_editor.rs
termua/src/window/main_window/: actions.rs  mod.rs  render.rs  state.rs  tests.rs
termua/src/window/main_window/actions/: sftp.rs  sharing.rs  ssh.rs  terminal.rs
termua/src/window/new_session/: actions.rs  mod.rs  nav.rs  render.rs  ssh.rs  state.rs  tests.rs
termua/src/window/settings/: actions.rs  keybindings.rs  meta.rs  mod.rs  render.rs  state.rs  tests.rs  view.rs
termua/themes/: termua-comfort.json
