[package]
name = "termua"
edition.workspace = true
version.workspace = true
description = "A terminal app built with GPUI"
build = "build.rs"
license.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
async-tungstenite = { workspace = true, features = ["smol-runtime"] }
atomic-write-file.workspace = true
env_logger.workspace = true
futures.workspace = true
gpui.workspace = true
gpui_platform = { workspace = true, features = ["wayland", "x11"] }
gpui-component.workspace = true
gpui_common.workspace = true
termua_zeroclaw.workspace = true
log.workspace = true
gpui_dock.workspace = true
gpui_term.workspace = true
gpui_sftp.workspace = true
gpui_transfer.workspace = true
menubar.workspace = true
termua_relay.workspace = true
smol.workspace = true
rustix.workspace = true
wezterm-ssh = { workspace = true, features = ["vendored-openssl"] }
home.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_lenient.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
libc.workspace = true
rust-i18n.workspace = true
rand.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authentication_Identity",
    "Win32_Security_Credentials",
    "Win32_System",
    "Win32_System_Registry",
    "Win32_System_Threading"
]}

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { workspace = true, features = ["rt-async-io-crypto-openssl"] }

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }

[build-dependencies]
embed-resource.workspace = true

[lints]
workspace = true

[package.metadata.deb]
maintainer = "iamazy <iamazy.me@outlook.com>"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["../target/release/termua", "usr/bin/termua", "755"],
    ["../target/release/termua-relay", "usr/bin/termua-relay", "755"],
    ["../packaging/linux/termua.desktop", "usr/share/applications/termua.desktop", "644"],
    ["../assets/logo/termua.svg", "usr/share/icons/hicolor/scalable/apps/termua.svg", "644"],
    ["../README.md", "usr/share/doc/termua/README.md", "644"],
    ["../LICENSE-AGPL", "usr/share/doc/termua/LICENSE", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "../target/release/termua", dest = "/usr/bin/termua", mode = "0755" },
    { source = "../target/release/termua-relay", dest = "/usr/bin/termua-relay", mode = "0755" },
    { source = "../packaging/linux/termua.desktop", dest = "/usr/share/applications/termua.desktop", mode = "0644" },
    { source = "../assets/logo/termua.svg", dest = "/usr/share/icons/hicolor/scalable/apps/termua.svg", mode = "0644" },
    { source = "../README.md", dest = "/usr/share/doc/termua/README.md", mode = "0644" },
    { source = "../LICENSE-AGPL", dest = "/usr/share/licenses/termua/LICENSE", mode = "0644" },
]
