[package]
name = "gpui_dock"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui-component.workspace = true
gpui_common.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
rust-i18n.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
gpui-component-assets.workspace = true
smol.workspace = true

[lints]
workspace = true
