[package]
name = "gpui_term"
license = "GPL-3"
edition.workspace = true
version.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
bitflags.workspace = true
alacritty_terminal.workspace = true
camino.workspace = true
futures.workspace = true
gpui.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
gpui_common.workspace = true
home.workspace = true
libc.workspace = true
log.workspace = true
notify-rust.workspace = true
parking_lot.workspace = true
polling.workspace = true
regex.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serial2 = "0.2.33"
filedescriptor = { git = "https://github.com/iamazy/wezterm.git", branch = "nxssh" }
signal-hook.workspace = true
smol.workspace = true
sysinfo.workspace = true
time.workspace = true
unicode-width.workspace = true
unicode-segmentation = "1.12.0"
url.workspace = true
urlencoding.workspace = true
gpui_transfer = { path = "../gpui_transfer" }

# wezterm dependencies
wezterm_ssh = { package = "wezterm-ssh", path = "../wezterm-ssh", features = ["vendored-openssl"] }
wezterm_term = { package = "wezterm-term", git = "https://github.com/iamazy/wezterm.git", branch = "nxssh" }
portable_pty = { package = "portable-pty", git = "https://github.com/iamazy/wezterm.git", branch = "nxssh" }
wezterm_surface = { package = "wezterm-surface", git = "https://github.com/iamazy/wezterm.git", branch = "nxssh" }

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-text.workspace = true

[dev-dependencies]
env_logger.workspace = true
gpui = { workspace = true, features = ["test-support"] }
