[package]
name = "gpui_term"
license.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
bitflags.workspace = true
alacritty_terminal.workspace = true
camino.workspace = true
futures.workspace = true
gpui.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
gpui_common.workspace = true
home.workspace = true
libc.workspace = true
log.workspace = true
parking_lot.workspace = true
polling.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serial2.workspace = true
filedescriptor.workspace = true
signal-hook.workspace = true
smol.workspace = true
unicode-width.workspace = true
unicode-segmentation.workspace = true
url.workspace = true
urlencoding.workspace = true

# wezterm dependencies
wezterm-ssh = { workspace = true, features = ["vendored-openssl"] }
wezterm-term.workspace = true
portable-pty.workspace = true
wezterm-surface.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-text.workspace = true

[dev-dependencies]
env_logger.workspace = true
gpui = { workspace = true, features = ["test-support"] }
gpui_platform = { workspace = true, features = ["wayland", "x11"] }
