[package]
name = "menubar"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
rust-i18n.workspace = true

[dev-dependencies]
env_logger.workspace = true
gpui = { workspace = true, features = ["test-support"] }
gpui-component-assets.workspace = true

[lints]
workspace = true
