[package]
name = "termua_relay"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
axum = { version = "0.8", features = ["ws"] }
futures.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.29"

[[bin]]
name = "termua-relay"
path = "src/main.rs"
