[package]
name = "wezterm-ssh"
version = "0.4.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2018"
repository = "https://github.com/wezterm/wezterm"
description = "More convenient higher level wrapper around libssh2"
license = "MIT"
documentation = "https://docs.rs/wezterm-ssh"
autotests = false
autoexamples = false
autobenches = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false
doctest = false

[[example]]
name = "proxycommand"
path = "examples/proxycommand.rs"

[[example]]
name = "proxyjump"
path = "examples/proxyjump.rs"

[[test]]
name = "proxyjump_support"
path = "tests/proxyjump_support.rs"

[[test]]
name = "sftp_errors"
path = "tests/sftp_errors.rs"

[features]
default = ["libssh-rs", "ssh2"]
vendored-openssl = ["ssh2/vendored-openssl", "libssh-rs/vendored-openssl"]
vendored-openssl-ssh2 = ["ssh2/vendored-openssl"]
vendored-openssl-libssh-rs = ["libssh-rs/vendored-openssl"]

[dependencies]
anyhow.workspace = true
base64 = {workspace = true, features=["std"]}
bitflags.workspace = true
camino.workspace = true
dirs-next.workspace = true
filedescriptor.workspace = true
filenamegen.workspace = true
gethostname.workspace = true
hex = { workspace = true, features = ["std"] }
libc.workspace = true
libssh-rs = {workspace=true, features=["vendored"], optional = true}
log.workspace = true
portable-pty.workspace = true
regex.workspace = true
smol.workspace = true
socket2.workspace = true
sha2.workspace = true
ssh2 = {workspace=true, features=["openssl-on-win32"], optional = true}
thiserror.workspace = true
wezterm-uds.workspace = true

# Not used directly, but is used to centralize the openssl vendor feature selection
async_ossl.workspace = true

[target.'cfg(unix)'.dependencies]
passfd.workspace = true

[dev-dependencies]
k9 = "0.11"
